force-app/main/default/objects/Opportunity/fields/Agent_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Discount_Amount__c</fullName>
    <formula>Amount * Agent_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>