force-app/main/default/objects/Opportunity/fields/Agent_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Invoiced_Amount__c</fullName>
    <formula>Amount - Agent_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>