force-app/main/default/objects/Opportunity/fields/Agent_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agent_Percentage__c</fullName>
    <label>Agent Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>