force-app/main/default/objects/Opportunity/fields/Bill_Agent__c.field-meta.xml
<CustomField>
    <fullName>Bill_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill Agent)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>