force-app/main/default/objects/Opportunity/fields/Billing_Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Agent Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Bill_Agent__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>