force-app/main/default/objects/Opportunity/fields/Consortium_Name__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consortium Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consortium/Network</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>