force-app/main/default/objects/Opportunity/fields/Purchase_Model__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Model__c</fullName>
    <label>Purchase Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual Access</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>