force-app/main/default/objects/Opportunity/recordTypes/Library_Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Library_Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Standard Sales Process</description>
    <label>Library Sales Opportunity</label>
</RecordType>