force-app/main/default/objects/Opportunity/validationRules/Require_Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Lost&quot; ) 
&amp;&amp; 
ISPICKVAL( Closed_Lost_Reason__c , &quot;&quot; )</errorConditionFormula>
    <errorMessage>For stage Closed Lost, pick an appropriate Closed Lost Reason.</errorMessage>
</ValidationRule>