force-app/main/default/objects/Opportunity/validationRules/Require_Other_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Closed_Lost_Reason__c , &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Reason__c)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter other reason the opportunity was lost</errorMessage>
</ValidationRule>